--- a/app/src/main/res/layout/add_bill.xml
+++ b/app/src/main/res/layout/add_bill.xml
@@ -146,45 +146,6 @@
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <TextView
-            android:text="Frequency:"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/textView8"
-            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
-            android:textColor="?attr/editTextColor" />
-
-        <RadioGroup
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1" >
-
-            <RadioButton
-                android:text="Once"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/add_bill_freq_once"
-                android:layout_weight="1"
-                android:textSize="24sp"
-                android:onClick="onRadioButtonClicked" />
-
-            <RadioButton
-                android:text="Montly"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/add_bill_freq_monthly"
-                android:layout_weight="1"
-                android:textSize="24sp"
-                android:onClick="onRadioButtonClicked" />
-        </RadioGroup>
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:clickable="true"
         android:gravity="bottom|center"
@@ -196,7 +157,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/add_bill_cancel"
             android:layout_weight="1"
-            android:background="@color/red_light"
+            android:background="@drawable/red_button"
             android:textSize="24sp"
             android:shadowDx="2"
             android:shadowDy="2"
@@ -215,7 +176,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/add_bill_confirm"
             android:layout_weight="1"
-            android:background="@color/green_light"
+            android:background="@drawable/green_button"
             android:textSize="24sp"
             android:onClick="onAddBillConfirmClick" />
     </LinearLayout>
