--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,4 +8,20 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="CustomDialog" parent="Theme.AppCompat.Light.Dialog.Alert">
+        <!-- Used for the buttons -->
+        <item name="colorAccent">#000000</item>
+        <!-- Used for the title and text -->
+        <item name="android:textColorPrimary">#000000</item>
+        <!-- Used for the background -->
+        <item name="android:background">#FFFFFF</item>
+        <item name="android:borderlessButtonStyle">@style/RedButton</item>
+    </style>
+
+    <style name="RedButton" parent="@android:style/Widget.Holo.Button.Borderless">
+        <item name="android:width">200dp</item>
+        <item name="android:layout_marginTop">5dp</item>
+    </style>
+
+
 </resources>
