--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="yellow_dark">#c19300</color>
     <color name="blue_light">#92b3e1</color>
     <color name="blue_dark">#224678</color>
+    <color name="grey_light">#C0C0C0</color>
 </resources>
