--- a/app/src/main/res/layout/add_bill.xml
+++ b/app/src/main/res/layout/add_bill.xml
@@ -76,19 +76,16 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/textView5"
-            android:layout_weight="6.44"
             android:textAppearance="@style/TextAppearance.AppCompat.Display1"
             android:textColor="?attr/editTextColor" />
 
-        <EditText
-            android:layout_width="268dp"
-            android:layout_height="wrap_content"
-            android:inputType="date"
-            android:ems="10"
-            android:id="@+id/add_bill_date"
-            android:hint="MM/dd/YYYY"
-            android:background="@android:drawable/editbox_dropdown_light_frame"
-            android:textSize="24sp" />
+        <DatePicker
+            android:id="@+id/datePicker"
+            android:layout_width="match_parent"
+            android:layout_height="91dp"
+            android:calendarViewShown="false"
+            android:datePickerMode="spinner"
+            android:padding="-10dp" />
 
     </LinearLayout>
 
