fixed popup and added icons

--- a/app/src/main/res/layout/add_bill.xml
+++ b/app/src/main/res/layout/add_bill.xml
@@ -85,6 +85,7 @@
             android:layout_height="91dp"
             android:calendarViewShown="false"
             android:datePickerMode="spinner"
+            android:textSize="25dp"
             android:padding="-10dp" />
 
     </LinearLayout>
